# Librify

./: CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc
Controllers/: book_manager.cpp  book_manager.h  database_controller.cpp  database_controller.h  enums.h
Controllers/Models/: book_model.cpp  book_model.h  bookmodel.cpp  bookmodel.h
UI/BookForm/: BookForm.qml  EditBookForm.qml
UI/MainControllers/: Reading.qml
UI/NavBar/: NavBar.qml  NavButton.qml
UI/TopBar/: SearchBar.qml  TopBar.qml
